@@ -1,5 +1,12 @@
 2013-02-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	* javax/lang/model/SourceVersion.java,
+	(KEYWORDS): Add array containing language keywords.
+	(isKeyword(CharSequence)): Implemented.
+	(isName(CharSequence)): Likewise.
+
+2013-02-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	* javax/annotation/processing/SupportedSourceVersion.java:
 	Implemented.
 	(value()): Implemented.
